<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBackground">

    <TextView
        android:id="@+id/emptyMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/no_favorite"
        android:textSize="20sp"
        android:visibility="visible"
        android:padding="10dp" />

</LinearLayout>