...
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/trackTitleID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Track Title"
                            android:textColor="#000"
                            android:textSize="@dimen/large_text"
                            app:layout_constraintStart_toStartOf="parent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.7"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ToggleButton
                        android:id="@+id/buttonFavoriteID"
                        android:layout_width="@dimen/large_text"
                        android:layout_height="@dimen/large_text"
                        android:background="@drawable/ic_button_favorite"
                        android:checked="false"
                        android:text=""
                        android:textOff=""
...
