<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/emptyMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:padding="@dimen/classic_margin"
        android:textSize="@dimen/normal_text"
        android:visibility="gone" />

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/refreshNearMe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cardListId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
