...
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:textColor="@color/text_dark"
        android:id="@+id/follow_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="@string/follow"
        android:textAllCaps="false"
        android:textSize="16sp" />
...
